Search button fixing for the margin and overflow issue

--- a/css/custom.css
+++ b/css/custom.css
@@ -112,6 +112,9 @@ label {
     width: 100%;
     margin: 0 auto;
 }
+.buttom_margin {
+    margin-bottom: 50px;
+}
 
 .part1 input[type="date"],
 .part2 input[type="date"] {
@@ -182,7 +185,6 @@ input[type=submit] {
     background: #007eb2;
     color: #fff;
     width: 100%;
-    margin-top: 50px;
     font-size: 18px;
     -webkit-border-radius: 5px;
     border-radius: 5px;
@@ -204,7 +206,7 @@ input[type=submit] {
     height: 32px;
     position: absolute;
     right: 15px;
-    top: 60px;
+    top: 10px;
     width: 28px;
 }
 
